[1.5.1]
- Updated to libgdx 1.6.5-SNAPSHOT
- API Change: now behavior trees support annotations to define attributes and constraints in task classes.
- Fix: now the reach orientation behavior always chooses the shortest rotation angle.
- API Addition: added Formation Motion API, see https://github.com/libgdx/gdx-ai/wiki/Formation-Motion
- API Change: the Steering Behavior API has slightly changed to interact with the new Formation Motion API.
- API Addition: added random distributions to behavior trees.
- API Addition: added shortcut methods to send telegrams without specifying a sender.
- API Addition: added capability to reset behavior trees.
- API Addition: added zero speed threshold to the Limiter interface.

[1.5.0]
- API Change: moved singleton capability of the MessageDispatcher to MessageManager, meaning that you can now use multiple message dispatchers if needed.
- API Addition: added capability to register programmatically created behavior tree archetypes in BehaviorTreeLibrary.
- API Addition: added capability to scan pending telegrams, so they can be saved and subsequently restored on game loading, see https://github.com/libgdx/gdx-ai/wiki/Message-Handling#saving-and-restoring-pending-messages
- API Addition: added pathfinding and path smoothing, see https://github.com/libgdx/gdx-ai/wiki/Pathfinding
- API Addition: added scheduling API supporting task time slicing over several frames, see https://github.com/libgdx/gdx-ai/wiki/Scheduling
- API Change: moved raycast classes to the common package com.badlogic.gdx.ai.utils
- API Addition: added collides method to RaycastCollisionDetector.
- API Change: now Ray has start and end points instead of an origin and a direction.

[1.4.0]
- API Addition: added behaviors trees (thanks implicit-invocation), see https://github.com/libgdx/gdx-ai/wiki/Behavior-Trees
- API Addition: added steering behaviors, see https://github.com/libgdx/gdx-ai/wiki/Steering-Behaviors